--- a/webshop-backend/src/main/resources/application.properties
+++ b/webshop-backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.port=8080
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/webshop
+spring.datasource.username=postgres
+spring.datasource.password=webshop
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
